package com.example.mihail.googledrive.presentation.recycler_data.view;


public interface IFileAdapterView {
    void refresh();
}
